--- a/calculator.html
+++ b/calculator.html
@@ -14,6 +14,7 @@
     #generateBtn { background:#FFA500; }
     table { margin-bottom:30px; }
   </style>
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 </head>
 <body>
   <!-- nav bar -->
