--- a/calculator.html
+++ b/calculator.html
@@ -50,7 +50,7 @@
     
     <div class="filter-bar">
       <label>Competition:
-        <select id="competitionSelect"><option>All</option><option>U15 (Boys)</option><option>U17 (Boys)</option><option>MABA Cup</option><option>Agong Cup</option></select>
+        <select id="competitionSelect" onchange="updateYears()><option>All</option><option>U15 (Boys)</option><option>U17 (Boys)</option><option>MABA Cup</option><option>Agong Cup</option></select>
       </label>
       <label>Year:
         <select id="yearSelect"><option>All</option><option>2024</option><option>2025</option></select>
