--- a/historical.html
+++ b/historical.html
@@ -81,7 +81,7 @@
 </div>
 
  <!-- Box Score Table -->
- <div class="table-wrapper">
+ <div class="table-wrapper table-type2">
     <table id="statsTable">
       <thead>
         <tr>
