--- a/historical.html
+++ b/historical.html
@@ -263,8 +263,7 @@
 
     currentPage = 1;
     renderTable(filtered);
-    document.getElementById('tableWrapper').style.display = 'block';
-    document.getElementById('pagination').style.display = 'flex';
+    document.querySelector('.table-type2 table').style.display = 'table';
   }
 
   let sortDescending = true;
