--- a/calculator.html
+++ b/calculator.html
@@ -50,13 +50,13 @@
 
     <div class="filter-bar">
       <label for="competitionSelect">Competition:</label>
-        <select id="competitionSelect" onchange="updateYears()">
+        <select id="competitionSelect" multiple size = "3" onchange="updateYears()">
           <option>All</option>
           <option>U15 (Boys)</option>
           <option>U17 (Boys)</option>
         </select>
       
-      <label for="yearSelect">Year:</label>
+      <label for="yearSelect" multiple size = "3">Year:</label>
         <select id="yearSelect">
           <option>All</option>
           <option>2024</option>
@@ -88,60 +88,6 @@
       </table>
     </div>
   </div>
-    <!--
-      <div class="position-group">
-        <h3>Point Guard</h3>
-        <div class="slider-group" id="pg-weights">
-          <label>PTS <input name="pg_pts" type="range" min="0" max="100" value="40" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>40</span>%</label> 
-          <label>AST <input name="pg_as" type="range" min="0" max="100" value="40" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>40</span>%</label>
-          <label>FGA <input name="pg_fga" type="range" min="0" max="100" value="10" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>10</span>%</label> 
-          <label>TOS <input name="pg_to" type="range" min="0" max="100" value="10" oninput="updateWeightAutoAdjusted(this, 'pg')"> <span>10</span>%</label>
-        </div>
-        <p>Total: <span id="pg-total">100</span>%</p>
-      </div>
-
-      <div class="position-group">
-        <h3>Wings</h3>
-        <div class="slider-group" id="wg-weights">
-          <label>PTS <input name="wg_pts" type="range" min="0" max="100" value="10" oninput="updateWeightAutoAdjusted(this, 'wg')"> <span>10</span>%</label> 
-          <label>AST <input name="wg_as" type="range" min="0" max="100" value="40" oninput="updateWeightAutoAdjusted(this, 'wg')"> <span>40</span>%</label>
-          <label>FGA <input name="wg_fga" type="range" min="0" max="100" value="10" oninput="updateWeightAutoAdjusted(this, 'wg')"> <span>10</span>%</label> 
-          <label>TOS <input name="wg_to" type="range" min="0" max="100" value="40" oninput="updateWeightAutoAdjusted(this, 'wg')"> <span>40</span>%</label>
-        </div>
-        <p>Total: <span id="wg-total">100</span>%</p>
-      </div>
-    </div>
-
-    <div class = 'row-wrapper'>  
-      <div class="position-group">
-        <h3>Center</h3>
-        <div class="slider-group" id="center-weights">
-          <label>PTS <input name="center_pts" type="range" min="0" max="100" value="40" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>40</span>%</label> 
-          <label>AST <input name="center_as" type="range" min="0" max="100" value="10" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>10</span>%</label>
-          <label>FGA <input name="center_fga" type="range" min="0" max="100" value="10" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>10</span>%</label> 
-          <label>TOS <input name="center_to" type="range" min="0" max="100" value="40" oninput="updateWeightAutoAdjusted(this, 'center')"> <span>40</span>%</label>
-        </div>
-        <p>Total: <span id="center-total">100</span>%</p>
-      </div>
-
-      <div class="position-group">
-        <h3>Defensive</h3>
-        <div class="slider-group" id="def-weights">
-          <label>PTS <input name="def_pts" type="range" min="0" max="100" value="10" oninput="updateWeightAutoAdjusted(this, 'def')"> <span>10</span>%</label> 
-          <label>AST <input name="def_as" type="range" min="0" max="100" value="10" oninput="updateWeightAutoAdjusted(this, 'def')"> <span>10</span>%</label>
-          <label>FGA <input name="def_fga" type="range" min="0" max="100" value="40" oninput="updateWeightAutoAdjusted(this, 'def')"> <span>40</span>%</label> 
-          <label>TOS <input name="def_to" type="range" min="0" max="100" value="40" oninput="updateWeightAutoAdjusted(this, 'def')"> <span>40</span>%</label>
-        </div>
-        <p>Total: <span id="def-total">100</span>%</p>
-      </div>
-    </div>
-  
-    <button id="generateBtn">Generate Rankings</button>
-    <div id="errorMsg" style="color:#f55; margin:10px 0;"></div>
-    <div id="rankingMatrix"></div>
-  </div>
-  -->
-
     
   <script>
     let originalData = [];
