--- a/calculator.html
+++ b/calculator.html
@@ -5,6 +5,7 @@
   <title>Advanced Weight Calculator</title>
   <link rel="stylesheet" href="style.css"/>
   <script src="https://cdn.jsdelivr.net/npm/papaparse@5.4.1/papaparse.min.js"></script>
+  <link rel="icon" href="favicon.ico" type="image/x-icon" />
 </head>
 <body>
   <!-- nav bar -->
